--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
     port: ${REDIS_PORT}
     database: ${REDIS_DATABASE}
 
+jwt:
+  time:
+    accessExp: ${JWT_ACCESS_EXP}
+    refreshExp: ${JWT_REFRESH_EXP}
+
 
 coolsms:
   access: ${COOLSMS_ACCESS}
