--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
     host: ${REDIS_HOST}
     port: ${REDIS_PORT}
 
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 jwt:
   access-secret: ${JWT_ACCESS_SECRET}
   refresh-secret: ${JWT_REFRESH_SECRET}
