Add :: NeisProperties 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,6 @@ coolsms:
   access: ${COOLSMS_ACCESS}
   secret: ${COOLSMS_SECRET}
   phone-number: ${COOLSMS_PHONE_NUMBER}
+
+neis:
+  authKey: ${NEIS_AUTH_KEY}
